--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,11 +1,9 @@
 
-<div>
-  <h1>
-    Dating App
-  </h1>
-<app-value></app-value>
+<app-nav></app-nav>
+<app-home></app-home>
+
        
-</div>
+
 
 
 
